<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="company_name">Udacity</string>
    <string name="address">2465 Latham St Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website"> www.udacity.com</string>
    <string name="motto">The journey to your future starts here</string>
    <string name="email">india-media@udacity.com</string>
    <string name="logo_description">logo</string>
    <string name="udacity_picture">udacity picture</string>
</resources>
